package supertype;

public interface TipoSonido {
    void makeSound();
}