package supertype;

public interface TipoVuelo {
    void vuelo();
}