package supertypeim;
import supertype.TipoVuelo;

public class VueloConAlas implements TipoVuelo {
    public void vuelo() {
        System.out.println("Esta volando, aleteando");
    }
}
